--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -8,3 +8,11 @@
 
   --font-russo-one: "Russo One", sans-serif;
 }
+
+.mask-to-left {
+  mask-image: linear-gradient(to left, black 95%, transparent 100%);
+}
+
+.mask-to-bottom {
+  mask-image: linear-gradient(to bottom, black 95%, transparent 100%);
+}
